# Tenovice_fund_page

./: .gitignore  CLAUDE.md  Makefile  README.md  TESTING_PLAN.md  monthly_update.json  one_time.json
cdk/: Makefile  cdk.json  pyproject.toml
cdk/src/: app.py  stack.py
cdk/src/constructs/: apigw.py  config.py  dynamodb.py  lambdas.py  s3_website.py
services/pledges_api/: requirements-test.txt
services/pledges_api/src/domain/: models.py  validation.py
services/pledges_api/src/handlers/: create_pledge.py  get_pledge.py  get_pledge_by_email.py  get_stats.py  list_pledges.py  update_pledge.py
services/pledges_api/tests/: README.md  conftest.py
services/pledges_api/tests/integration/: test_create_pledge.py
services/pledges_api/tests/unit/: test_models.py  test_validation.py
tests/e2e/: test_api_pledges.py
web/: README.md  config.js  index.html  main.js  pledge.html  pledge.js  style.css  success.html
